# benchmarking

./: .gitignore  README.md  core  main.py  pyproject.toml  requirements.txt
data/fasta/: scope40-test.fa
figures/foldseek_20251116_171731/: confusion_matrix.csv
figures/tmvec1_20251119_173240/: confusion_matrix.csv
figures/tmvec1_swiss_20251119_170645/: confusion_matrix.csv
figures/tmvec2_student_(cosine_loss_only)_20251223_194343/: confusion_matrix.csv
figures/tmvec2_student_(cosine_loss_only)_20251224_125714/: confusion_matrix.csv
figures/tmvec2_student_20251222_123151/: confusion_matrix.csv
figures/tmvec_student_(cosine_loss_only)_20251223_194217/: confusion_matrix.csv
figures/tmvec_student_20251116_164357/: confusion_matrix.csv
results/: foldseek_similarities.csv  foldseek_similarities_0.01.csv  foldseek_similarities_1000.csv  scope40_foldseek_similarities.parquet  scope40_tmalign_similarities.parquet  scope40_tmvec1_similarities.parquet  scope40_tmvec_student_similarities.parquet
scripts/: foldseek.sh  tmalign.sh  tmvec-student.sh  tmvec1.sh  tmvec2.sh
src/benchmarks/: cosine_tmvec_student.py  embedding_generators.py  foldseek_benchmark.py  tmalign_benchmark.py  tmvec_1.py  tmvec_2.py  tmvec_pipeline.py  tmvec_student.py
src/model/: student_cos_only_model.py  student_model.py  tmvec_model.py
src/util/: foldseek_benchmark.py  get_cath_truth.py  get_merged_table.py  graphs_foldseek.py  graphs_student.py  graphs_tmvec2.py  pdb_downloader.py  tmalign_benchmark.py  tmvec_1.py  tmvec_2.py  tmvec_student.py
src/visualization/: graphs_foldseek.py  (+4 more)
(+9 files in other folders)
