[project]
name = "benchmarking"
version = "0.1.0"
description = "Protein structure similarity benchmarking suite for TM-score prediction methods including Foldseek, TMalign, and TM-Vec"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "huggingface-hub>=1.2.3",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "protobuf>=6.33.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "wandb>=0.15.0",
]
