[project]
name = "benchmarking"
version = "0.1.0"
description = "Protein structure similarity benchmarking suite for TM-score prediction methods including Foldseek, TMalign, and TM-Vec"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython",
    "huggingface-hub",
    "lightning",
    "matplotlib",
    "pandas",
    "protobuf",
    "pyarrow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentencepiece",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
]
